--- a/book.toml
+++ b/book.toml
@@ -21,11 +21,14 @@ page-break = true # 插入分页
 
 [output.html]
 # github图标
-git-repository-url = ""
+git-repository-url = "https://github.com/iqdxa/iqdxa.github.io"
 git-repository-icon = "fa-github"
 # 编辑按钮
-edit-url-template = "https://github.com/<owner>/<repo>/edit/<branch>/{path}"
+edit-url-template = "https://github.com/iqdxa/iqdxa.github.io/edit/main/{path}"
 
+[preprocessor.toc]
+command = "mdbook-toc"
+renderer = ["html"]
 
 [output.markdown]
 
